[package]
name = "chromaprint-rust"
version = "0.1.0"
edition = "2021"
description = "Safe Rust wrapper for Chromaprint"
authors = ["Assil Ksiksi <assil@ksiksi.net>"]
readme = "README.md"
homepage = "https://github.com/aksiksi/chromaprint"
repository = "https://github.com/aksiksi/chromaprint"
license = "MIT"
keywords = ["audio", "fingerprinting"]
categories = ["multimedia::audio"]

[dependencies]
chromaprint-sys-next = "1.5"
thiserror = "1"

[features]
default = []
static = ["chromaprint-sys-next/static"]
dynamic = ["chromaprint-sys-next/dynamic"]

# FFT version to use when building from source.
# Note: only one of these should be set.
avfft = ["chromaprint-sys-next/avfft"]
fftw3 = ["chromaprint-sys-next/fftw3"]
fftw3f = ["chromaprint-sys-next/fftw3f"]
kissfft = ["chromaprint-sys-next/kissfft"]
vdsp = ["chromaprint-sys-next/vdsp"]
